tests/negative/expr_reify_interp.lev
// LA-31 Stage 3 §3 — string interpolation is unsupported (E2).
class User { string name; new User(string n) { name = n; } }
string useIt(expr::Expr<(User)=>bool> e) { return "x"; }
console.writeln(useIt((u) => "${u.name}!" == "x"));
